# smart3d

./: README.md
AdaptativeSolvers/: CMakeLists.txt
AdaptativeSolvers/JPEG/: CMakeLists.txt
AdaptativeSolvers/PNG/: CMakeLists.txt
AdaptativeSolvers/PNG/src/: png.h
AdaptativeSolvers/PoissonRecon/: CMakeLists.txt
AdaptativeSolvers/PoissonRecon/src/: PoissonRecon.cpp  PoissonRecon.h
AdaptativeSolvers/SSDRecon/: CMakeLists.txt
AdaptativeSolvers/SSDRecon/src/: SSDRecon.cpp  SSDRecon.h
AdaptativeSolvers/SurfaceTrimmer/: CMakeLists.txt
AdaptativeSolvers/SurfaceTrimmer/src/: SurfaceTrimmer.cpp  SurfaceTrimmer.h
AdaptativeSolvers/ZLIB/: CMakeLists.txt
AdaptativeSolvers/src/: Array.h  BSplineData.h  BlockedVector.h  FEMTree.Evaluation.inl  FEMTree.IsoSurface.specialized.inl  FEMTree.SortedTreeNodes.inl  FEMTree.System.inl  FEMTree.h  FEMTree.inl  JPEG.h  MAT.h  MarchingCubes.h  PNG.h  PNG.inl  PPolynomial.h  PPolynomial.inl  SparseMatrix.h  SparseMatrix.inl  SparseMatrixInterface.h  SparseMatrixInterface.inl  VertexDataOperations.h  Window.h
AliceVision/src/: CMakeLists.txt
AliceVision/src/AVTexturing/: AVTexturing.cpp  AVTexturing.h  CMakeLists.txt
AliceVision/src/aliceVision/: prettyprint.hpp
AliceVision/src/aliceVision/mesh/: Texturing.cpp
AliceVision/src/dependencies/osi_clp/: CMakeLists.txt
AliceVision/src/dependencies/osi_clp/Clp/src/: CMakeLists.txt
AliceVision/src/dependencies/osi_clp/Clp/src/OsiClp/: CMakeLists.txt
AliceVision/src/dependencies/osi_clp/CoinUtils/src/: CMakeLists.txt
AliceVision/src/dependencies/osi_clp/Osi/src/Osi/: CMakeLists.txt
AliceVision/src/software/pipeline/: main_meshing.cpp
AliceVision/src/software/utils/: main_sfmColorHarmonize.cpp
AliceVision/src/software/utils/sfmColorHarmonize/: colorHarmonizeEngineGlobal.cpp  colorHarmonizeEngineGlobal.hpp
Claudette/: CMakeLists.txt  README.md
Claudette/src/: box.h  box_bld.cpp  collision_model_3d.h  math3d.cpp  math3d.h  mytritri.cpp  mytritri.h  tritri.c
FastQuadricSimplification/: CMakeLists.txt
FastQuadricSimplification/src/: FastQuadricSimplification.cpp  FastQuadricSimplification.h  SymetricMatrix.cpp  SymetricMatrix.h  VecMath.h
HelpBlocksProject/: .gitignore  helpMart-0005.htd  helpMart-0005.htm  helpMart-0007.htd  helpMart-0007.htm  helpMart-0009.htd  helpMart-0009.htm  helpMart-0010.htd  helpMart-0010.htm  helpMart-0012.htd  helpMart-0012.htm  helpMart-0014.htd  helpMart-0014.htm  helpMart-0016.htd  helpMart-0016.htm  helpMart-0017.htd  helpMart-0017.htm  helpMart-0018.htd  helpMart-0018.htm  helpMart-0019.htd  helpMart-0019.htm  helpMart-0020.htd  helpMart-0020.htm  helpMart-0021.htd  helpMart-0021.htm  helpMart-0022.htd  helpMart-0022.htm  helpMart-0023.htd  helpMart-0023.htm  helpMart-0024.htd  helpMart-0024.htm  helpMart-0025.htd  helpMart-0025.htm  helpMart-0026.htd  helpMart-0026.htm  helpMart-0027.htd  helpMart-0027.htm  helpMart-0031.htd  helpMart-0031.htm  helpMart-0032.htd  (+77 more)
SMART3D/: .gitignore  CMakeLists.txt  license.txt
SMART3D/src/: AboutDialog.cpp  AboutDialog.h  AlignTool.cpp  AlignTool.h  AlignWithAxisTool.cpp  AlignWithAxisTool.h  AngleTool.cpp  AngleTool.h  AxisWidget.cpp  AxisWidget.h  Calibration.h  Camera.cpp  Camera.h  CheckCamTool.cpp  CheckCamTool.h  ConfigurationDialog.cpp  ConfigurationDialog.h  DeleteTool.cpp  DeleteTool.h  DistanceTool.cpp  DistanceTool.h  DontShowAgainDialog.cpp  DontShowAgainDialog.h  Draw.cpp  Draw.h  ElevationTool.cpp  ElevationTool.h  FrmPrincipal.cpp  FrmPrincipal.h  GPSData.cpp  GPSData.h  HelperCOLMAP.cpp  HelperCOLMAP.h  HelperMeshRecon.cpp  HelperMeshRecon.h  HelperOpenMVG.h  ICP.cpp  ICP.h  ICPDialog.cpp  ICPDialog.h  (+69 more)
